--- a/client.htm
+++ b/client.htm
@@ -275,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-4-23-free-node-subscribe.htm" title="「4月23日」最高速度22.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「4月23日」最高速度22.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-67133.htm" title="上海宠物领养救助站是真的吗（上海宠物领养机构）">上海宠物领养救助站是真的吗（上海宠物领养机构）</a></li>
-                        <li class="py-2"><a href="/news/article-82571.htm" title="java使用单循环链表解决约瑟夫问题">java使用单循环链表解决约瑟夫问题</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-17-free-subscribe-node.htm" title="「3月17日」最高速度21.3M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「3月17日」最高速度21.3M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-104832.htm" title="宠物疫苗批号有假的吗 宠物疫苗批号有假的吗怎么查">宠物疫苗批号有假的吗 宠物疫苗批号有假的吗怎么查</a></li>
-                        <li class="py-2"><a href="/news/article-84717.htm" title="上海宠物领养中心电话（上海宠物领养中心免费领养狗狗）">上海宠物领养中心电话（上海宠物领养中心免费领养狗狗）</a></li>
-                        <li class="py-2"><a href="/news/article-69714.htm" title="领养狗狗协议书范本最新（犬只领养协议）">领养狗狗协议书范本最新（犬只领养协议）</a></li>
-                        <li class="py-2"><a href="/news/article-80474.htm" title="springcloud解决使用feign调用服务 header参数传递的问题">springcloud解决使用feign调用服务 header参数传递的问题</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-17-free-v2ray-subscribe.htm" title="「4月17日」最高速度22.5M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「4月17日」最高速度22.5M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-93483.htm" title="动物防疫站给猫打疫苗吗（动物防疫站给猫打针免费吗）">动物防疫站给猫打疫苗吗（动物防疫站给猫打针免费吗）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-8-free-high-speed-nodes.htm" title="「4月8日」最高速度19.6M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接">「4月8日」最高速度19.6M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-80475.htm" title="FP-growth算法以及代码实现">FP-growth算法以及代码实现</a></li>
+                        <li class="py-2"><a href="/news/article-83300.htm" title="力狼狗粮客服电话（力狼狗粮厂家电话）">力狼狗粮客服电话（力狼狗粮厂家电话）</a></li>
+                        <li class="py-2"><a href="/news/article-97962.htm" title="动物疫苗价格表图片高清大图大全 动物疫苗价格表图片高清大图大全集">动物疫苗价格表图片高清大图大全 动物疫苗价格表图片高清大图大全集</a></li>
+                        <li class="py-2"><a href="/news/article-69062.htm" title="java使用单循环链表解决约瑟夫问题">java使用单循环链表解决约瑟夫问题</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-27-free-high-speed-nodes.htm" title="「3月27日」最高速度22.8M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「3月27日」最高速度22.8M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-70348.htm" title="go微服务框架Kratos简单使用总结">go微服务框架Kratos简单使用总结</a></li>
+                        <li class="py-2"><a href="/news/article-106331.htm" title="jQuery实现呼吸灯轮播图">jQuery实现呼吸灯轮播图</a></li>
+                        <li class="py-2"><a href="/news/article-67132.htm" title="JSON  传输数据出现415错误 Content type &#8216;application/xml;charset=UTF-8&#8217; not supported">JSON  传输数据出现415错误 Content type &#8216;application/xml;charset=UTF-8&#8217; not supported</a></li>
+                        <li class="py-2"><a href="/news/article-75031.htm" title="免费领养狗狗正规网站平台有哪些呢图片（免费领养狗狗）">免费领养狗狗正规网站平台有哪些呢图片（免费领养狗狗）</a></li>
                     </ul>
     </div>
 </div>
@@ -296,7 +296,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">77</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
