--- a/date/2025-03/page-6.htm
+++ b/date/2025-03/page-6.htm
@@ -250,16 +250,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-74341.htm" title="猫咪3针疫苗多少钱 猫咪3针疫苗多少钱一针">猫咪3针疫苗多少钱 猫咪3针疫苗多少钱一针</a></li>
-                        <li class="py-2"><a href="/news/article-97958.htm" title="宠物猫一般多少钱一只?（宠物猫多少钱一只正常价）">宠物猫一般多少钱一只?（宠物猫多少钱一只正常价）</a></li>
-                        <li class="py-2"><a href="/news/article-67132.htm" title="JSON  传输数据出现415错误 Content type &#8216;application/xml;charset=UTF-8&#8217; not supported">JSON  传输数据出现415错误 Content type &#8216;application/xml;charset=UTF-8&#8217; not supported</a></li>
-                        <li class="py-2"><a href="/news/article-93483.htm" title="动物防疫站给猫打疫苗吗（动物防疫站给猫打针免费吗）">动物防疫站给猫打疫苗吗（动物防疫站给猫打针免费吗）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-3-free-v2ray.htm" title="「3月3日」最高速度20.9M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「3月3日」最高速度20.9M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-4-node-share-links.htm" title="「3月4日」最高速度23M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「3月4日」最高速度23M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-71035.htm" title="宠物粮生产设备（宠物粮生产设备哪家好）">宠物粮生产设备（宠物粮生产设备哪家好）</a></li>
+                        <li class="py-2"><a href="/news/article-86160.htm" title="浅谈分布式一致性协议之3PC">浅谈分布式一致性协议之3PC</a></li>
+                        <li class="py-2"><a href="/news/article-102372.htm" title="动物疫苗行业排名前十名有哪些 动物疫苗行业排名前十名有哪些品牌">动物疫苗行业排名前十名有哪些 动物疫苗行业排名前十名有哪些品牌</a></li>
+                        <li class="py-2"><a href="/news/article-103924.htm" title="【LINT】cpplint修改版：自定义编码风格检查工具lint_在线工具">【LINT】cpplint修改版：自定义编码风格检查工具lint_在线工具</a></li>
+                        <li class="py-2"><a href="/news/article-97188.htm" title="动物疫苗打几次最好呢（动物疫苗打一次管多长时间）">动物疫苗打几次最好呢（动物疫苗打一次管多长时间）</a></li>
+                        <li class="py-2"><a href="/news/article-79806.htm" title="宠物医院服务项目价格表（宠物医院服务项目价格表最新）">宠物医院服务项目价格表（宠物医院服务项目价格表最新）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-12-node-share.htm" title="「3月12日」最高速度18.6M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「3月12日」最高速度18.6M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-79805.htm" title="宠物粮的种类大全（宠物粮go）">宠物粮的种类大全（宠物粮go）</a></li>
                         <li class="py-2"><a href="/news/article-84004.htm" title="流浪猫上门的忌讳（猫上门为什么不能赶走）">流浪猫上门的忌讳（猫上门为什么不能赶走）</a></li>
-                        <li class="py-2"><a href="/news/article-71685.htm" title="动物诊疗许可证多少钱（动物诊疗许可证样本）">动物诊疗许可证多少钱（动物诊疗许可证样本）</a></li>
-                        <li class="py-2"><a href="/news/article-66501.htm" title="流光之城刘妍（流光之城结局）学到了吗，">流光之城刘妍（流光之城结局）学到了吗，</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-24-node-share-links.htm" title="「3月24日」最高速度21.9M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「3月24日」最高速度21.9M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-1-node-share-links.htm" title="「4月1日」最高速度21.1M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「4月1日」最高速度21.1M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -271,7 +271,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">77</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
