--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -138,16 +138,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-77746.htm" title="ES 文档与索引介绍">ES 文档与索引介绍</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-13-free-v2ray.htm" title="「3月13日」最高速度21.4M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「3月13日」最高速度21.4M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-81213.htm" title="狗猫批发市场（猫狗市场的猫怎么样）">狗猫批发市场（猫狗市场的猫怎么样）</a></li>
-                        <li class="py-2"><a href="/news/article-79101.htm" title="宠物猫疫苗接种时间（宠物猫疫苗有效期多久）">宠物猫疫苗接种时间（宠物猫疫苗有效期多久）</a></li>
-                        <li class="py-2"><a href="/news/article-97187.htm" title="牲畜打疫苗完成的简报内容（牲畜注射疫苗简报）">牲畜打疫苗完成的简报内容（牲畜注射疫苗简报）</a></li>
-                        <li class="py-2"><a href="/news/article-100205.htm" title="【面试普通人VS高手系列】volatile关键字有什么用？它的实现原理是什么？_在线工具">【面试普通人VS高手系列】volatile关键字有什么用？它的实现原理是什么？_在线工具</a></li>
-                        <li class="py-2"><a href="/news/article-74341.htm" title="猫咪3针疫苗多少钱 猫咪3针疫苗多少钱一针">猫咪3针疫苗多少钱 猫咪3针疫苗多少钱一针</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-27-free-high-speed-nodes.htm" title="「3月27日」最高速度22.8M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「3月27日」最高速度22.8M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-16-free-node-subscribe.htm" title="「3月16日」最高速度19.8M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「3月16日」最高速度19.8M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-77070.htm" title="Centos7系统离线安装nginx步骤(亲测，超详细步骤)">Centos7系统离线安装nginx步骤(亲测，超详细步骤)</a></li>
+                        <li class="py-2"><a href="/news/article-78429.htm" title="C/C++标准格式、输入输出及main函数的作用">C/C++标准格式、输入输出及main函数的作用</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-9-free-node-subscribe-links.htm" title="「3月9日」最高速度21.1M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接">「3月9日」最高速度21.1M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-15-free-high-speed-nodes.htm" title="「3月15日」最高速度19.1M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「3月15日」最高速度19.1M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-104832.htm" title="宠物疫苗批号有假的吗 宠物疫苗批号有假的吗怎么查">宠物疫苗批号有假的吗 宠物疫苗批号有假的吗怎么查</a></li>
+                        <li class="py-2"><a href="/news/article-75031.htm" title="免费领养狗狗正规网站平台有哪些呢图片（免费领养狗狗）">免费领养狗狗正规网站平台有哪些呢图片（免费领养狗狗）</a></li>
+                        <li class="py-2"><a href="/news/article-84004.htm" title="流浪猫上门的忌讳（猫上门为什么不能赶走）">流浪猫上门的忌讳（猫上门为什么不能赶走）</a></li>
+                        <li class="py-2"><a href="/news/article-67778.htm" title="宠物打疫苗前需要做什么检查（宠物医院打疫苗前做检查要钱吗）">宠物打疫苗前需要做什么检查（宠物医院打疫苗前做检查要钱吗）</a></li>
+                        <li class="py-2"><a href="/news/article-83299.htm" title="猫不打疫苗可以出门吗（猫不打疫苗可以出门吗）">猫不打疫苗可以出门吗（猫不打疫苗可以出门吗）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-9-free-node-subscribe-links.htm" title="「4月9日」最高速度20M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「4月9日」最高速度20M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-95024.htm" title="宠物领养免费平台有哪些软件（宠物领养免费平台有哪些软件好）">宠物领养免费平台有哪些软件（宠物领养免费平台有哪些软件好）</a></li>
                     </ul>
     </div>
 </div>
@@ -159,7 +159,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">77</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
