--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -107,6 +107,58 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-09">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-9-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/823330949e90bc030d363139bfc4db3d.webp" alt="「4月9日」最高速度20M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-9-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月9日」最高速度20M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了美国、香港、新加坡、日本、韩国、加拿大、欧洲等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-08">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-8-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/d21208fec1e7d0709067a1f22cc3ab5b.webp" alt="「4月8日」最高速度19.6M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-8-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月8日」最高速度19.6M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了加拿大、新加坡、香港、美国、韩国、日本、欧洲等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-07">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-7-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/23719af02f410bf11c49229669ae7202.webp" alt="「4月7日」最高速度20M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-7-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月7日」最高速度20M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了香港、韩国、欧洲、加拿大、新加坡、美国、日本等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-06">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-6-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/d21208fec1e7d0709067a1f22cc3ab5b.webp" alt="「4月6日」最高速度22.9M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-6-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月6日」最高速度22.9M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了新加坡、欧洲、韩国、加拿大、日本、美国、香港等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2025-04-05">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-4-5-node-share-links.htm" class="xcblog-blog-url">
@@ -185,58 +237,6 @@
                                     <p>这一次的节点更新覆盖了韩国、新加坡、香港、欧洲、美国、加拿大、日本等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-03-30">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-3-30-free-node-subscribe.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/610552e86a81521a4f6a2a8194cb9de6.webp" alt="「3月30日」最高速度21.8M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-3-30-free-node-subscribe.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月30日」最高速度21.8M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了日本、美国、新加坡、香港、加拿大、欧洲、韩国等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-03-29">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-3-29-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/610552e86a81521a4f6a2a8194cb9de6.webp" alt="「3月29日」最高速度18.2M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-3-29-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月29日」最高速度18.2M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了新加坡、韩国、香港、欧洲、加拿大、美国、日本等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-03-28">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-3-28-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/556b5dbcfe6584f0352cb6fadde73408.webp" alt="「3月28日」最高速度22.3M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-3-28-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月28日」最高速度22.3M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了欧洲、日本、加拿大、新加坡、韩国、美国、香港等地区,最高速度可达22.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-03-27">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-3-27-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/b9df39e5d5485e2cc4800be641032094.webp" alt="「3月27日」最高速度22.8M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-3-27-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月27日」最高速度22.8M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了新加坡、韩国、加拿大、日本、欧洲、美国、香港等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
                             <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>                        </div>
                     </div>
@@ -247,16 +247,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-100205.htm" title="【面试普通人VS高手系列】volatile关键字有什么用？它的实现原理是什么？_在线工具">【面试普通人VS高手系列】volatile关键字有什么用？它的实现原理是什么？_在线工具</a></li>
-                        <li class="py-2"><a href="/news/article-72343.htm" title="element中el-cascader的使用">element中el-cascader的使用</a></li>
+                        <li class="py-2"><a href="/news/article-98637.htm" title="1970年农历四月二十是什么星座（1970年阴历四月二十是什么星座）">1970年农历四月二十是什么星座（1970年阴历四月二十是什么星座）</a></li>
+                        <li class="py-2"><a href="/news/article-67777.htm" title="合肥宠物领养中心官网地址 合肥宠物领养中心官网地址查询">合肥宠物领养中心官网地址 合肥宠物领养中心官网地址查询</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-3-19-node-share.htm" title="「3月19日」最高速度21.5M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「3月19日」最高速度21.5M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-30-free-node-subscribe.htm" title="「3月30日」最高速度21.8M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接">「3月30日」最高速度21.8M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-100861.htm" title="上海领养宠物的地方在哪（上海领养宠物的地方在哪儿）">上海领养宠物的地方在哪（上海领养宠物的地方在哪儿）</a></li>
-                        <li class="py-2"><a href="/news/article-77747.htm" title="上海宠物医院有多少家分院啊（上海宠物医院知乎）">上海宠物医院有多少家分院啊（上海宠物医院知乎）</a></li>
-                        <li class="py-2"><a href="/news/article-75695.htm" title="合肥哪里有领养猫狗的地方 合肥有领养猫的地方吗">合肥哪里有领养猫狗的地方 合肥有领养猫的地方吗</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-4-node-share-links.htm" title="「3月4日」最高速度23M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「3月4日」最高速度23M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-95772.htm" title="成都市宠物狗领养平台官网电话（成都宠物狗领养吧）">成都市宠物狗领养平台官网电话（成都宠物狗领养吧）</a></li>
-                        <li class="py-2"><a href="/news/article-73013.htm" title="VUE元素的隐藏和显示（v-show指令)">VUE元素的隐藏和显示（v-show指令)</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-20-clash-v2ray-ss-ssr.htm" title="「3月20日」最高速度21.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「3月20日」最高速度21.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-8-free-high-speed-nodes.htm" title="「4月8日」最高速度19.6M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接">「4月8日」最高速度19.6M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-73671.htm" title="宠物领养论坛网站（宠物领养信息发布）">宠物领养论坛网站（宠物领养信息发布）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-4-free-high-speed-nodes.htm" title="「4月4日」最高速度19.3M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「4月4日」最高速度19.3M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-100205.htm" title="【面试普通人VS高手系列】volatile关键字有什么用？它的实现原理是什么？_在线工具">【面试普通人VS高手系列】volatile关键字有什么用？它的实现原理是什么？_在线工具</a></li>
+                        <li class="py-2"><a href="/news/article-100206.htm" title="宠颐生中心医院（宠颐生中心医院怎么样）">宠颐生中心医院（宠颐生中心医院怎么样）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-1-node-share-links.htm" title="「4月1日」最高速度21.1M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「4月1日」最高速度21.1M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -268,7 +268,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">77</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
